# cycles

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
.github/workflows/: release.yaml
src/: actions.rs  bike.rs  camera.rs  collision.rs  controls.rs  game.rs  hud.rs  loading.rs  main.rs  menu.rs  opponent.rs  path_highlight.rs  player.rs  race.rs  random.rs  track.rs
src/controls/: actions.rs  buttons.rs  mouse.rs
src/game/: finish_race.rs
