[package]
name = "cycle-speedway"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# IMPORTANT: Remove dynamic linking before release
# https://bevyengine.org/learn/quick-start/getting-started/setup/
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_prototype_lyon = "0.12.0"
fastrand = "2.1.0"
